This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

21-Aug-2002 (Lars Duening)  (3.3.231)
   - (comm.c, object.c, simulate.c, swap.c) Corrected some warnings
        (reported by Dafire).
   - (interpret, and some more files) Master applies caused by external events
        (like ERQ messages) are now distinguished from internal calls
        (like valid_write()) so that the error handling for external calls
        receive the full eval cost benefits (suggested by Fiona).
   - (Makefile.in s): Added missing @EXEEXT@ tags.

20-Aug-2002 (Lars Duening)  (3.3.230)
   - (main.c) Needed to #include <netdb.h> on Solaris to get the
        MAXHOSTNAMELEN macro (thanks, Coogan).
   - (util/erq/erq.c, util/xerq/erq.c) Forgot the timestamp in the
        initial startup message.
   - (port, files.c, comm.c, hosts/unix.h) Cygwin corrections.
   - (config.h, configure, driver.h, erqs) New configuration option
        with-erq-debug sets the new config.h macro ERQ_DEBUG which
        defines the ERQ debug level. No more '-DDEBUG' to enable
        the debugging code in the ERQs (suggested by Bill).

19-Aug-2002 (Lars Duening)  (3.3.229)
   - (lex.c) An error in a permanent define given on the command line
        would crash the driver because the lexer called error() before
        the VM had been set up.
   - (main.c) If the driver uses the default debug.log file, its (mudlib)
        name is available in the predefined macro __DEBUG_LOG__ (suggested
        by Mandragon).
   - (driver.h, config.h) Made the config.h macro DEBUG invisible to the
        ERQs as their debugging mode is controlled by their Makefiles.
   - (util/erq/erq.c, util/xerq/erq.c) The ERQs now print their name
        and compilation date to stderr on startup.
   - (closure.c) Efun symbol_efun() freed symbol-svalues as strings
        (reported by Dafire).